# Beep

./: .gitignore  .travis.yml  Cargo.toml  Makefile.toml
.github/workflows/: build.yml  release-windows.yml  release.yml
bot/: .Cargo.toml.un~  Cargo.toml  Cargo.toml~
bot/src/: lib.rs
bot/src/bot/: mod.rs
bot/src/bot/commands/: mod.rs  moderation.rs
bot/src/bot/commands/config/: general.rs  moderation.rs
bot/src/bot/commands/dnd/: dice.rs
bot/src/bot/commands/ticket/: create.rs
bot/src/bot/util/: config.rs  database_store.rs  embed_store.rs  groups.rs  handler.rs  managers.rs
bot/src/bot/util/database_store/: enums.rs
ci/: before_deploy.sh
dnd/: Cargo.toml
dnd/src/: classes.rs  lib.rs  player.rs  races.rs
src/: lib.rs
src/commands/: mod.rs
src/commands/config/: general.rs  moderation.rs
src/commands/dnd/: dice.rs
src/commands/ticket/: create.rs
src/util/: database_store.rs  db.rs  embed_store.rs  groups.rs  handler.rs  managers.rs  mod.rs  permission.rs
src/util/database_store/: enums.rs
src/util/permission/: enums.rs
