[package]
name = "beep"
version = "0.1.1-alpha.0"
authors = ["Altagos <altagos@posteo.de>"]
edition = "2018"
description = "A Discord Bot"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
env_logger = "0.6"
log = "0.4"
kankyo = "0.2"
toml = "0.5"
mongodb = "1.1.1"
rand = "0.7"
dashmap = "4.0.0-rc6"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"

[dependencies.lavalink-rs]
git = "https://gitlab.com/nitsuga5124/lavalink-rs/"
branch = "master"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "cache",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "voice"
]
version = "0.9.0-rc.0"

[[bin]]
path = "src/bin/beep.rs"
name = "beep"
